prøver å legge til første flashcardside

--- a/ReadySetGo/ReadySetGo.csproj
+++ b/ReadySetGo/ReadySetGo.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Views\Flashcard\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Flashcard\" />
+  </ItemGroup>
 </Project>
