--- a/ReadySetGo/Properties/launchSettings.json
+++ b/ReadySetGo/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "ReadySetGo": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "flashcard/table",
       "applicationUrl": "https://localhost:7186;http://localhost:5277",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
